made Home and FunFacts pages have same style as Hachiko page and fixed alignment issues

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
+* {
+  background-color: aliceblue;
+  color: black;
+}
+
+body {
+  background-color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -7,19 +21,17 @@
 header {
   width: 100%;
   background-color: #333;
-  color: white;
   padding: 20px;
 }
 
-nav {
+.nav-bar {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  font-weight: bold;
 }
 
-.nav-bar a {
-  color: white;
-  text-decoration: none;
+.nav-bar span {
   margin: 0 10px;
 }
 
@@ -52,4 +64,13 @@ nav {
 
 .Mylist {
   margin-top: 0;
+}
+
+.description {
+  width: 300px;
+}
+
+.funfactslist {
+  width: 700px;
+  margin: 50px;
 }
